--- a/StaffTrackApp.PL/Pages/Index.cshtml
+++ b/StaffTrackApp.PL/Pages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "General page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @Model.CompanyName</h1>
+    <h3>About us</h3>
+    <p>@Model.CompanyInfo</p>
 </div>
