--- a/StaffTrackApp.PL/Pages/Staff.cshtml
+++ b/StaffTrackApp.PL/Pages/Staff.cshtml
@@ -21,7 +21,7 @@
                         @foreach (var department in Model.Departments)
                         {
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="department-@department.Id" name="DepartmentId" value="@department.Name">
+                                <input class="form-check-input" type="checkbox" id="department-@department.Id" name="DepartmentIds" value="@department.Id">
                                 <label class="form-check-label" for="department-@department.Id">
                                     @department.Name
                                 </label>
@@ -35,7 +35,7 @@
                         @foreach (var position in Model.Positions)
                         {
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="position-@position.Id" name="Position" value="@position.Name">
+                                <input class="form-check-input" type="checkbox" id="position-@position.Id" name="PositionIds" value="@position.Id">
                                 <label class="form-check-label" for="position-@position.Id">
                                     @position.Name
                                 </label>
@@ -47,12 +47,14 @@
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" id="name" name="Name" />
                 </div>
-                <form method="get">
-                    <div class="form-group mt-2">
-                        <button type="submit" class="btn btn-primary">Apply Filters</button>
-                    </div>
-                </form>
+                <div class="form-group mt-2">
+                    <input type="submit" class="btn btn-primary" value="Apply Filters" />
+                </div>
+                <div class="form-group mt-2">
+                    <button type="button" class="btn btn-secondary" onclick="clearFilters()">Clear Filters</button>
+                </div>
             </form>
+
         </div>
         <div class="col-md-10">
             <table class="table table-striped table-bordered">
@@ -67,6 +69,7 @@
                         <th>DateOfBirth</th>
                         <th>EmploymentDate</th>
                         <th>Adress</th>
+                        <th>Edit</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -82,6 +85,9 @@
                             <td>@employee.DateOfBirth.ToShortDateString()</td>
                             <td>@employee.EmploymentDate.ToShortDateString()</td>
                             <td>@employee.Address</td>
+                            <td>
+                                <a asp-page="EditEmployee" asp-route-id="@employee.Id">Edit</a>
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -89,3 +95,17 @@
         </div>
     </div>
 </div>
+
+<script>
+    function clearFilters() {
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(function (checkbox) {
+            checkbox.checked = false;
+        });
+
+        var nameInput = document.getElementById('name');
+        nameInput.value = '';
+
+        document.querySelector('form').submit();
+    }
+</script>
