--- a/StaffTrackApp.PL/Pages/EditEmployee.cshtml
+++ b/StaffTrackApp.PL/Pages/EditEmployee.cshtml
@@ -43,13 +43,13 @@
 
         <div class="form-group mt-3">
             <label asp-for="Employee.DateOfBirth"></label>
-            <input asp-for="Employee.DateOfBirth" class="form-control" />
+            <input asp-for="Employee.DateOfBirth" class="form-control" type="date" />
             <span asp-validation-for="Employee.DateOfBirth" class="text-danger"></span>
         </div>
 
         <div class="form-group mt-3">
             <label asp-for="Employee.EmploymentDate"></label>
-            <input asp-for="Employee.EmploymentDate" class="form-control" />
+            <input asp-for="Employee.EmploymentDate" class="form-control" type="date" />
             <span asp-validation-for="Employee.EmploymentDate" class="text-danger"></span>
         </div>
 
